-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
While testing lnet sysfs patches, it is found that lctl list_param -R does not display everything under sysfs tree.
The lnet-sysfs hierarchy is something like -
/sys/fs/lnet/net/o2ib1/ib0
But lctl list_param -R does not display anything beyond
/sys/fs/lnet/net
This is because of the below code in param_display function in -
tmp = strstr(paths.gl_pathv[i], param_name);
Here instead of param_name, it should be /param_name/